<resources>
    <string name="app_name">CopenhagenBuzz</string>
    <string name="copenhagenbuzz"><b>CopenhagenBuzz</b></string>
    <string name="event_name">Event name</string>
    <string name="event_location">Event location</string>
    <string name="select_date">Select Date</string>
    <string name="event_type">Event type</string>
    <string name="event_description">Event description</string>
    <string name="event_date">Event date (dd/mm/yyyy hh:mm)</string>
    <string name="create_event">Create Event</string>
    <string name="guest">Guest</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="logout_button">Logout Button</string>
    <string name="login_button">Login Button</string>
    <string name="timeline">Timeline</string>
    <string name="favorites">Favorites</string>
    <string name="add_event">Add Event</string>
    <string name="maps">Maps</string>
    <string name="calendar">Calendar</string>
    <string name="edit">Edit</string>
    <string name="info">Info</string>
    <string name="temp_content_description">Something about the harbour…</string>
    <string name="temp_calendar">Calendar!!! :)</string>
    <string name="add_new_event">Add new event</string>
    <string name="edit_event">Edit event</string>
    <string name="confirm_edit_event">Confirm edit</string>
    <string name="delete_event">Delete event</string>
    <string name="confirm_delete_event">Confirm deletion of event</string>
    <string name="cancel_edit">Cancel edit</string>
    <string name="preference_file_key">dk.itu.moapd.copenhagenbuzz.parkmkki.PREFERENCE_FILE_KEY</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addimage">Add image</string>
    <string name="takepicture">Take picture</string>
    <string name="reset_drawing">Reset Drawing</string>
    <string name="preview_of_image_to_add">Preview of image to add</string>
    <string name="set_alarm">Set alarm</string>
    <string name="event_started_label">Event Started</string>
    <string name="set_alarm_label">Set Alarm</string>
</resources>